WIP filter needs pagination

--- a/characters/characters.html
+++ b/characters/characters.html
@@ -18,9 +18,9 @@
         <div class="cloud cloud4"></div>
     </div>
 
-    <input type="text" id="character-name" placeholder="Type the name of a simpson character"> 
-    <button id="fetch-btn" >Fetch Data</button>
-    <button id="fetch-all-btn">Fetch All Characters Data</button>
+    <h1>Characters</h1>
+
+    <input type="text" id="character-input" placeholder="Type the name of a simpson character"> 
 
     <div id="character-info">
         <h2 id="name"></h2>
