working pagination for all categories

--- a/index.html
+++ b/index.html
@@ -23,9 +23,15 @@
     <div class = "button-link">
         <a href="characters/characters.html">Go to Characters</a>
     </div>
+
+    <div class = "button-link">
+        <a href="characters picker/characterspicker.html">Go to Characters Picker</a>
+    </div>
+
     <div class = "button-link">
         <a href="episodes/episodes.html">Go to Episodes</a>
     </div>
+
     <div class = "button-link">
         <a href="locations/locations.html">Go to Locations</a>
     </div>
