better main page

--- a/index.html
+++ b/index.html
@@ -20,20 +20,22 @@
     <h1>Welcome to The Simpsons API</h1>
     <p>Explore information about your favorite Simpsons characters and episodes!</p>
 
-    <div class = "button-link">
-        <a href="characters/characters.html">Go to Characters</a>
-    </div>
+    <div class="button-links">
+        <div class = "button-link">
+            <a href="characters/characters.html">Go to Characters</a>
+        </div>
 
-    <div class = "button-link">
-        <a href="characters picker/characterspicker.html">Go to Characters Picker</a>
-    </div>
+        <div class = "button-link">
+            <a href="characters picker/characterspicker.html">Go to Characters Picker</a>
+        </div>
 
-    <div class = "button-link">
-        <a href="episodes/episodes.html">Go to Episodes</a>
-    </div>
+        <div class = "button-link">
+            <a href="episodes/episodes.html">Go to Episodes</a>
+        </div>
 
-    <div class = "button-link">
-        <a href="locations/locations.html">Go to Locations</a>
+        <div class = "button-link">
+            <a href="locations/locations.html">Go to Locations</a>
+        </div>
     </div>
 
     
