added simple quiz system with random questions

--- a/index.html
+++ b/index.html
@@ -1,43 +1,49 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>The Simpsons API</title>
-    <link rel="stylesheet" href="background.css">
-    <link rel="stylesheet" href="main.css">
-</head>
-<body>
+    <link rel="stylesheet" href="background.css" />
+    <link rel="stylesheet" href="main.css" />
+  </head>
+  <body>
     <div class="sky">
-       <div class="moon"></div>
-       <div class="sun"></div>
-        <div class="cloud cloud1"></div>
-        <div class="cloud cloud2"></div>
-        <div class="cloud cloud3"></div>
-        <div class="cloud cloud4"></div>
+      <div class="moon"></div>
+      <div class="sun"></div>
+      <div class="cloud cloud1"></div>
+      <div class="cloud cloud2"></div>
+      <div class="cloud cloud3"></div>
+      <div class="cloud cloud4"></div>
     </div>
 
     <h1>Welcome to The Simpsons API</h1>
-    <p>Explore information about your favorite Simpsons characters and episodes!</p>
+    <p>
+      Explore information about your favorite Simpsons characters and episodes!
+    </p>
 
     <div class="button-links">
-        <div class = "button-link">
-            <a href="characters/characters.html">Go to Characters</a>
-        </div>
+      <div class="button-link">
+        <a href="characters/characters.html">Go to Characters</a>
+      </div>
 
-        <div class = "button-link">
-            <a href="characters picker/characterspicker.html">Go to Characters Picker</a>
-        </div>
+      <div class="button-link">
+        <a href="characters_picker/characterspicker.html"
+          >Go to Characters Picker</a
+        >
+      </div>
 
-        <div class = "button-link">
-            <a href="episodes/episodes.html">Go to Episodes</a>
-        </div>
+      <div class="button-link">
+        <a href="episodes/episodes.html">Go to Episodes</a>
+      </div>
 
-        <div class = "button-link">
-            <a href="locations/locations.html">Go to Locations</a>
-        </div>
+      <div class="button-link">
+        <a href="locations/locations.html">Go to Locations</a>
+      </div>
+
+      <div class="button-link">
+        <a href="quiz/quiz.html">Go to Quiz</a>
+      </div>
     </div>
-
-    
-</body>
+  </body>
 </html>
