--- a/specific_episode/specificepisode.html
+++ b/specific_episode/specificepisode.html
@@ -1,39 +1,38 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>The Simpsons API</title>
-    <link rel="stylesheet" href="specificepisode.css">
-    <link rel="stylesheet" href="../background.css">
-    <link rel="stylesheet" href="../fonts/fonts.css"
-</head>
-<body>
-
+    <link rel="stylesheet" href="specificepisode.css" />
+    <link rel="stylesheet" href="../background.css" />
+    <link rel="stylesheet" href="../fonts/fonts.css" />
+  </head>
+  <body>
     <div class="sky">
-       <div class="moon"></div>
-       <div class="sun"></div>
-        <div class="cloud cloud1"></div>
-        <div class="cloud cloud2"></div>
-        <div class="cloud cloud3"></div>
-        <div class="cloud cloud4"></div>
+      <div class="moon"></div>
+      <div class="sun"></div>
+      <div class="cloud cloud1"></div>
+      <div class="cloud cloud2"></div>
+      <div class="cloud cloud3"></div>
+      <div class="cloud cloud4"></div>
     </div>
 
-    <button id="previouspage" onclick="location.href='../episodes/episodes.html'">Previous Page</button>
-    
-    <div id="episodecontainer">
-    </div>
+    <button
+      id="previouspage"
+      onclick="location.href='../episodes/episodes.html'"
+    >
+      Previous Page
+    </button>
+
+    <div id="episodecontainer"></div>
 
     <div id="pagination">
-        <button id="prev-btn">Previous Episode</button>
+      <button id="prev-btn">Previous Episode</button>
 
-        <button id="next-btn">Next Episode</button>
+      <button id="next-btn">Next Episode</button>
     </div>
-    
-    <script type="module"
-        src="specificepisode.js">
-    </script>
-</body>
-</html>
-</body>
+
+    <script type="module" src="specificepisode.js"></script>
+  </body>
 </html>
