--- a/specific_location/specificlocation.html
+++ b/specific_location/specificlocation.html
@@ -6,7 +6,7 @@
     <title>The Simpsons API</title>
     <link rel="stylesheet" href="specificlocation.css">
     <link rel="stylesheet" href="../background.css">
-    <link rel="stylesheet" href="../fonts/fonts.css"
+    <link rel="stylesheet" href="../fonts/fonts.css">
 </head>
 <body>
 
@@ -33,7 +33,5 @@
     <script type="module"
         src="specificlocation.js">
     </script>
-</body>
-</html>
 </body>
 </html>
