--- a/characters_picker/characterspicker.html
+++ b/characters_picker/characterspicker.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>The Simpsons API</title>
-    <link rel="stylesheet" href="specificcharacter.css" />
+    <link rel="stylesheet" href="characterspicker.css" />
     <link rel="stylesheet" href="../background.css" />
-    <link rel="stylesheet" href="../fonts/fonts.css" />
   </head>
   <body>
     <div class="sky">
@@ -18,24 +17,19 @@
       <div class="cloud cloud4"></div>
     </div>
 
-    <button
-      id="previouspage"
-      onclick="location.href='../characters/characters.html'"
-    >
-      Previous Page
-    </button>
+    <h1>Characters Picker</h1>
 
     <div id="loading"></div>
     <p id="loading-text">Please wait until the characters are loaded</p>
 
-    <div id="charactercontainer"></div>
+    <div id="character-picker"></div>
 
-    <div id="pagination">
-      <button id="prev-btn">Previous Character</button>
-
-      <button id="next-btn">Next Character</button>
+    <p id="recent-choice"></p>
+    <div class="results">
+      <p id="level-number"></p>
+      <p id="turns-number"></p>
     </div>
 
-    <script type="module" src="specificcharacter.js"></script>
+    <script type="module" src="characterspicker.js"></script>
   </body>
 </html>
