fully working quiz

--- a/characters/characters.html
+++ b/characters/characters.html
@@ -18,9 +18,18 @@
       <div class="cloud cloud4"></div>
     </div>
 
-    <!-- <input type="text" id="phrases-input" placeholder="Rechercher qui dit quoi..."> -->
+    <div class="header-container">
+  <button
+    id="previouspage"
+    onclick="location.href='../index.html'"
+  >
+    Go Back
+  </button>
 
-    <h1 id="page-title">Characters</h1>
+  <h1 id="page-title">Characters</h1>
+</div>
+
+    <!-- <input type="text" id="phrases-input" placeholder="Rechercher qui dit quoi..."> -->
 
     <div class="search-controls">
       <input
