--- a/quiz/quiz.html
+++ b/quiz/quiz.html
@@ -31,12 +31,14 @@
 
     <button id="submit">Submit</button> -->
 
+    
+    <div id="score"></div>
+
     <div id="quiz-wrapper">
       <div id="question-container"></div>
       <div id="answers-container"></div>
     </div>
-
-    <div id="score"></div>
+    <div id="question"></div>
 
     <script type="module" src="quiz.js"></script>
   </body>
