--- a/specific_episode/specificepisode.html
+++ b/specific_episode/specificepisode.html
@@ -22,7 +22,7 @@
       id="previouspage"
       onclick="location.href='../episodes/episodes.html'"
     >
-      Previous Page
+      Go Back
     </button>
 
     <div id="episodecontainer"></div>
