--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>The Simpsons API</title>
     <link rel="stylesheet" href="background.css" />
     <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="../fonts/fonts.css"
   </head>
   <body>
     <div class="sky">
@@ -17,9 +18,9 @@
       <div class="cloud cloud4"></div>
     </div>
 
-    <h1>Welcome to The Simpsons API</h1>
+    <h1>Welcome to The Simpsons WIKI</h1>
     <p>
-      Explore information about your favorite Simpsons characters and episodes!
+      Explore information about your favorite Simpsons characters, episodes and locations!
     </p>
 
     <div class="button-links">
