improved index.html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>The Simpsons API</title>
     <link rel="stylesheet" href="background.css" />
     <link rel="stylesheet" href="main.css" />
-    <link rel="stylesheet" href="../fonts/fonts.css"
+    <link rel="stylesheet" href="../fonts/fonts.css" />
   </head>
   <body>
     <div class="sky">
@@ -20,7 +20,8 @@
 
     <h1>Welcome to The Simpsons WIKI</h1>
     <p>
-      Explore information about your favorite Simpsons characters, episodes and locations!
+      Explore information about your favorite Simpsons characters, episodes and
+      locations!
     </p>
 
     <div class="button-links">
